# raglex

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.asahi.yml  docker-compose.yml  extract_bailii_links.py  pyproject.toml
.github/workflows/: docker-image.yml
docs/: PROMPT-shorthand-global-store.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  explore.tsx  graph.tsx  pdfpane.tsx  styles.css  views.tsx
hpc/: README.md  embed_shards.py  myriad_embed.sh  myriad_setup.sh
schema/: postgres.sql
src/raglex/: __init__.py  cli.py  config.py  facade.py  jobs.py  mcp_server.py  settings.py
src/raglex/adapters/: __init__.py  _piste.py  a29wp.py  au_caselaw.py  au_fca_caselaw.py  au_hca_caselaw.py  au_legislation.py  au_nsw_caselaw.py  bailii.py  bailii_corpus.py  bailii_html.py  bailii_parquet.py  ca_caselaw.py  canlii.py  (+36 more)
tests/: conftest.py  test_a29wp.py  test_au_fca_caselaw.py  test_au_hca_caselaw.py  test_au_legislation.py  test_au_nsw_caselaw.py  test_authority.py  test_bailii_corpus.py  test_bailii_html.py  test_bailii_parquet.py  test_bwb_paragraphing.py  test_ca_hk_nz_legislation.py  test_canlii.py  test_caselaw_corpora.py  test_citations.py  test_commonwealth_citations.py  test_corrections.py  test_courtlistener.py  test_dila_paragraphs.py  test_dma.py  test_docx_extractor.py  test_drain.py  test_dutch_citations.py  test_echr.py  test_ecr_repair.py  test_edpb.py  test_effects.py  test_embed_job.py  test_embeddings.py  test_eu_cellar.py  test_eu_preparatory.py  test_eu_transposition_and_piste.py  test_extraction_pool.py  test_facade_mcp.py  test_fr_de_bulk_adapters.py  test_fr_de_live_adapters.py  test_fr_judilibre.py  test_fragments.py  test_french_citations.py  test_gap_scan.py  (+62 more)
(+117 files in other folders)
